namespace GraphFlix.DTOs
{
    public class GenreDto
    {
        public int Id { get; set; }
        public string Name { get; set; }
    }
}
