namespace GraphFlix.DTOs
{
    public class RoleDto
    {
        public int Id { get; set; }
        public string Name { get; set; }
    }
}
