namespace GraphFlix.DTOs
{
    public class TokenDto
    {
        public string TokenString { get; set; }
        public int ExpiresIn { get; set; }
    }
}
